--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,8 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- build:css({.tmp,app}) styles/main.css -->
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-wip/css/bootstrap.min.css">
+        <link rel="stylesheet" href="styles/bootstrap.css">
+        <link rel="stylesheet" href="bower_components/prettyphoto/css/prettyPhoto.css">
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
 </head>
@@ -37,9 +38,9 @@
       s.parentNode.insertBefore(g,s)}(document,'script'));
     </script>
 
-    <script src="bower_components/jquery/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-wip/js/bootstrap.min.js"></script>
+        <script src="bower_components/jquery/jquery.js"></script>
+        <script src="bower_components/prettyphoto/js/jquery.prettyPhoto.js"></script>
+        <script src="bower_components/angular/angular.js"></script>
 
         <!-- build:js scripts/plugins.js -->
         <script src="bower_components/bootstrap-sass/js/bootstrap-affix.js"></script>
@@ -68,7 +69,7 @@
         <script src="scripts/controllers/heroes.js"></script>
         <script src="scripts/directives/hero.js"></script>
         <script src="scripts/directives/roles.js"></script>
-        <script src="scripts/directives/video.js"></script>
+        <script src="scripts/directives/ability.js"></script>
 
         <!-- endbuild -->
 </body>
